fixed bubble on smaller window sizes

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ body {
 
 svg {
 	width: 100%;
+  stroke-width: 0;
 }
 
 .mw{
@@ -66,6 +67,19 @@ li {
 
 .test {
   position: absolute;
-  right: 22%;
+  right: 0%;
   top: 20%;
+}
+
+.person {
+  padding-top: 17em;
+}
+
+@media only screen and (min-width: 50em){
+.person {
+  padding-top: 0;
+}
+.test {
+right: 22%;
+}
 }
